<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Beryllium</string>
    <string name="tab_home">首页</string>
    <string name="tab_categories">分类</string>
    <string name="tab_system">体系</string>
    <string name="tab_mine">我的</string>
    <string name="not_login">未登录</string>
    <string name="home_mine_login_desc">登录后了解更多Android技术</string>
    <string name="mine_service_title">我的服务</string>
    <string name="mine_recommend">为你推荐</string>
    <string name="mine_author">作者:</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_not_login">未登录</string>
    <string name="mine_short_video">短视频</string>
    <string name="mine_my_works">我的作品</string>
    <string name="mine_my_store">我的店铺</string>
    <string name="mine_my_like">我喜欢的</string>

    <string name="mine_navigation">Navigation</string>
    <string name="mine_life_cycle">LifeCycle</string>
    <string name="mine_data_binging">DataBinding</string>
    <string name="mine_livedata">LiveData</string>
    <string name="mine_view_model">ViewModel</string>
    <string name="mine_paging">Paging</string>
    <string name="mine_room">Room</string>
    <string name="mine_hilt">Hilt</string>
    <string name="mine_compose">Compose</string>
    <string name="mine_mvc">MVC模式</string>
    <string name="mine_mvp">MVP模式</string>
</resources>